--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
       # Docker 이미지 빌드
       - name: docker image build
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo:latest .
 
       # DockerHub 로그인
       - name: docker login
