fix: DockerHub PUSH 할 때 버전이 빠져서 해당 부분 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
       # Docker 이미지 빌드
       - name: docker image build
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:latest .
 
       # DockerHub 로그인
       - name: docker login
