fix: CI/CD OPT 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,3 +54,34 @@ jobs:
       # DockerHub 이미지 PUSH, 기존에 생성해 둔 PRIVATE REGISTRY에 이미지를 업로드 한다
       - name: docker hub push
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:latest
+
+  run-docker-image-on-ec2:
+    # build-docker-image jobs가 완료되어야 실행된다
+    # 즉, 위에 선언된 job(build-docker-image)이 끝난후에 run-docker-image-on-ec2를 실행하겠다는 의미이다
+    needs: build-docker-image
+
+    # self-hosted를 통해 AWS EC2에서 이후 명령이 동작하도록 한다
+    runs-on: self-hosted
+
+    steps:
+      # 최신 이미지를 PULL 받는다
+      - name: Pulling Docker image
+        run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:latest
+
+      # 기존 컨테이너가 실행중이라면 중지를 진행한다
+      # $(sudo docker ps -q) // -q : quiet의 약자로 실행중인 컨테이너 전체 목록이 아닌 컨테이너 ID만 출력
+      # 2>
+      # /dev/numm : Linux 상에서 'black hole'로 작동하여 이곳으로 보내진 모든 데이터 삭제
+      # || true : 명령어가 실패하여도 shell script가 계속 실행되도록 지정
+      - name: Stop Docker Container
+        run: sudo docker stop $(sudo docker ps -q) 2>/dev/null || true
+
+      # 최신 이미지를 컨테이너화하여 실행시킨다
+      # --rm : 컨테이너 종료 시 자동으로 컨테이너 삭제
+      # --name : 컨테이너 이름 지정
+      - name: Run Docker container by docker image
+        run: sudo docker run --name ci-cd-demo --rm -d -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:latest
+
+      # 미사용 이미지 제거
+      - name: Delete old Docker image
+        run: docker system prune -f
