--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,18 +41,18 @@ jobs:
           arguments: clean bootJar
 
       # Docker 이미지 빌드
-      - name: docker image build
+      - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:latest .
 
       # DockerHub 로그인
-      - name: docker login
+      - name: Login Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       # DockerHub 이미지 PUSH, 기존에 생성해 둔 PRIVATE REGISTRY에 이미지를 업로드 한다
-      - name: docker hub push
+      - name: Push Docker Image to Docker Hub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:latest
 
   run-docker-image-on-ec2:
@@ -66,14 +66,14 @@ jobs:
     steps:
       # Private Docker Hub Repo를 사용하기에 Login이 필요할 것 같음
       # DockerHub 로그인
-      - name: docker login
+      - name: Login Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       # 최신 이미지를 PULL 받는다
-      - name: Pulling Docker image
+      - name: Pulling Docker Image
         run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:latest
 
       # 기존 컨테이너가 실행중이라면 중지를 진행한다
@@ -87,9 +87,9 @@ jobs:
       # 최신 이미지를 컨테이너화하여 실행시킨다
       # --rm : 컨테이너 종료 시 자동으로 컨테이너 삭제
       # --name : 컨테이너 이름 지정
-      - name: Run Docker container by docker image
+      - name: Run Docker container by docker Image
         run: sudo docker run --name ci-cd-demo --rm -d -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:latest
 
       # 미사용 이미지 제거
-      - name: Delete old Docker image
+      - name: Delete old Docker Image
         run: docker system prune -f
